libvncserver-dev, libvorbis-dev, libpulse-dev, libwebp-dev, freerdp2-dev, libpango1.0-dev, libossp-uuid-dev, libtool-bin
após a atualização do Guacamole Server para a versão 1.5.0 as dependências para a complicação exigiu mais bibliotecas,
atualização do script: 20-guacamole.sh referente a alteração das opções de compilação da inicialização do Guacamole
Server de Init para Systemd, alterado a linha: ./configure --with-systemd-dir=/etc/systemd/system/.

25/03/2023 - Robson Vaamonde - Atualização do script: 00-parametros.sh referente aos softwares: GLPI Help v9.5.12,
Guacamole Server e Client v1.5.0, Zabbix Server Repo v6.4.1, Docker Compose v2.17.1, Rundeck v4.11 e Plugin v3.2.3
e Nextcloud v26.0.

25/01/2023 - Robson Vaamonde - Atualização do script: 00-parametros.sh referente aos softwares: GLPI Help v10.0.6
e v9.5.12, Zabbix Server Repo v6.3.1, Docker Compose v2.15.1, Rundeck v4.9.0, Graylog Repo v5.0, Nextcloud v25.0.3

12/12/2022 - Robson Vaamonde - Atualização do script: 00-parametros.sh atualização da versão do OpenFire 4.7.4,
atualização do Asterisk 20.

09/12/2022 - Robson Vaamonde - Atualização do script: 00-parametros.sh atualização da versão do LogAnalyzer 4.1.13,
atualização do GLPI Help Desk 9.5.11 e 10.0.5, atualização do Docker Compose 2.14.0, atualização do RunDeck 4.8.0,
atualização do Plugin do Ansible 3.2.2, atualização do OCS Inventory 2.11.1, atualização do OCS Agent 2.10.0,
atualização do Nextcloud 25.0.1.

04/12/2022 - Robson Vaamonde - Atualização do script: 00-parametros.sh com mais uma dependência do Guacamole Server,
melhoria na documentação do script: 20-guacamole.sh em relação a configuração dos recursos de conexão remota: VNC, 
SSH, Telnet, RDP, melhoria no script: 15-netdata.sh em relação aos recursos de atualização do sistema.

05/10/2022 - Robson Vaamonde - Atualização do script: 00-parametros.sh em relação a variável de instalação do CFTV