@@ -17,7 +17,9 @@ libpng-dev, libjpeg-dev, libcairo2-dev, libavcodec-dev, libavformat-dev, libssh2
 libvncserver-dev, libvorbis-dev, libpulse-dev, libwebp-dev, freerdp2-dev, libpango1.0-dev, libossp-uuid-dev, libtool-bin
 após a atualização do Guacamole Server para a versão 1.5.0 as dependências para a complicação exigiu mais bibliotecas,
 atualização do script: 20-guacamole.sh referente a alteração das opções de compilação da inicialização do Guacamole
-Server de Init para Systemd, alterado a linha: ./configure --with-systemd-dir=/etc/systemd/system/.
+Server de Init para Systemd, alterado a linha: ./configure --with-systemd-dir=/etc/systemd/system/, atualização da
+linha da versão do Conector do Java do MySQL para: /usr/share/java/mysql-connector-*.jar referente a copia para o 
+diretório: /etc/guacamole/lib, remoção da copia do arquivo: user-mapping.xml do script: 20-guacamole.sh.
 
 25/03/2023 - Robson Vaamonde - Atualização do script: 00-parametros.sh referente aos softwares: GLPI Help v9.5.12,
 Guacamole Server e Client v1.5.0, Zabbix Server Repo v6.4.1, Docker Compose v2.17.1, Rundeck v4.11 e Plugin v3.2.3
